# MiniBot

./: .env.example  .gitignore  AGENT.md  LICENSE  README.md  pyproject.toml
benchmarks/: coding_tasks.json  real_coding_tasks.json
benchmarks/fixtures/code_formatter/: formatter.py
benchmarks/fixtures/context_compaction/: context.txt  verify.py
benchmarks/fixtures/delegate_hooks/: README.md  verify.py  verify_real.py
benchmarks/fixtures/docs_readme_status/: README.md  verify.py
benchmarks/fixtures/docs_usage_note/: verify.py  verify_real.py
benchmarks/fixtures/memory_project_decision/: verify.py
benchmarks/fixtures/recovery_stale_config/: settings.ini  verify.py  verify_real.py
benchmarks/fixtures/text_priority_label/: sample.txt  verify.py
benchmarks/fixtures/text_release_marker/: notes.txt  verify.py
benchmarks/fixtures/tool_path_escape/: sample.txt  (+2 more)
docs/: minibot-benchmark-methodology.md
src/minibot/: __init__.py  cli.py  context_manager.py  delegate.py  evaluator.py  hooks.py  memory.py  memory_llm.py  metrics.py  model_providers.py  models.py  permission.py  phase.py  prompt_cache.py  recovery.py  repl.py  run_store.py  runtime.py  task_state.py  todo_state.py  tools.py  workspace.py
tests/: test_cli.py  test_context_manager.py  test_delegate.py  test_evaluator.py  test_hooks.py  test_memory.py  test_metrics.py  test_minibot_scaffold.py  test_model_providers.py  test_permission.py  test_prompt_cache.py  test_recovery.py  test_repl.py  test_run_store.py  test_runtime.py  test_task_state.py  test_todo_state.py  test_tools.py  test_workspace.py
(+7 files in other folders)
